--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Nithin Krishna
-logo: /assets/whitee.png
+title: Lokesh Saipureddi
+logo: image (2).png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
